// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text snapshots bold 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 16px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
  size="normal"
>
  some text
</span>
`;

exports[`Text snapshots normal 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
  size="normal"
>
  some text
</span>
`;

exports[`Text snapshots with color 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #27AE60;
}

<span
  className="c0"
  color="success"
  size="normal"
>
  some text
</span>
`;
